# Apple_Music_Lyrics_Tauri

./: README.md  index.html  package-lock.json  package.json  webpack.config.prod.js
css/: style.css
js/: app.js
src-tauri/: Cargo.toml  tauri.conf.json
